Add SmallVec optimization to heaps with small arrays
- Add smallvec dependency to Cargo.toml
- Replace Vec with SmallVec in TwoThreeHeap, BinomialHeap, and SkewBinomialHeap
- TwoThreeHeap: children use SmallVec<[Option<NonNull<Node>>; 4]>
- BinomialHeap/SkewBinomialHeap: trees use SmallVec<[Option<NonNull<Node>>; 32]>
- Eliminates heap allocations for typical small heap sizes
- Update investigation document with findings and implementation status
- All tests pass

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ categories = ["data-structures", "algorithms"]
 [dependencies]
 # For benchmarking
 criterion = "0.5"
+# For stack-allocated vectors in fixed-arity heaps
+smallvec = "1.13"
 
 [dev-dependencies]
 proptest = "1.4"
