Address CodeRabbit suggestions: add permissions, concurrency, timeouts, and caching
- Add permissions block for security (contents: read, checks: write)
- Add concurrency settings to cancel outdated runs
- Add timeouts to all jobs (10-30 minutes based on job complexity)
- Add npm and pip caching for faster builds
- Specify Python 3.12 version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,19 @@ on:
 env:
   CARGO_TERM_COLOR: always
 
+permissions:
+  contents: read
+  checks: write
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   fmt:
     name: Rust Formatting
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     steps:
       - uses: actions/checkout@v4
       - name: Install Rust
@@ -46,6 +55,7 @@ jobs:
   clippy:
     name: Rust Clippy
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     steps:
       - uses: actions/checkout@v4
       - name: Install Rust
@@ -79,6 +89,7 @@ jobs:
   test:
     name: Rust Tests
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     steps:
       - uses: actions/checkout@v4
       - name: Install Rust
@@ -112,12 +123,14 @@ jobs:
   markdownlint:
     name: Markdown Linting
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
       - uses: actions/checkout@v4
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
       - name: Install markdownlint-cli
         run: npm install -g markdownlint-cli
       - name: Run markdownlint
@@ -126,6 +139,7 @@ jobs:
   pre-commit:
     name: Pre-Commit Hooks
     runs-on: ubuntu-latest
+    timeout-minutes: 20
     steps:
       - uses: actions/checkout@v4
       - name: Install Rust
@@ -156,7 +170,8 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
+          python-version: '3.12'
+          cache: 'pip'
       - name: Install pre-commit
         run: pip install pre-commit
       - name: Run pre-commit hooks
