--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -25,6 +25,8 @@ jobs:
         run: |
           # Run a sample of key proofs to verify the system works
           # Full proof suite can be run locally with: cargo kani --tests
+          # Note: Using || echo allows CI to pass during development while proofs are being refined
+          # TODO: Remove fallback once all proofs are stable and passing
           echo "Running basic trait-level proofs..."
           cargo kani --tests trait_level_proofs --harness verify_push_increments_len_binomial || echo "Proof failed - this is expected during development"
           echo "Running implementation-specific proofs..."
