--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -30,8 +30,8 @@ jobs:
           # Proof files are now in tests/kani/ as integration tests
           # Full proof suite can be run locally with: cargo kani --tests
           echo "Running basic trait-level proofs..."
-          cargo kani --tests --harness verify_push_increments_len_binomial || echo "Proof failed - this is expected during development"
+          cargo kani --tests --harness verify_push_increments_len_binomial
           echo "Running implementation-specific proofs..."
-          cargo kani --tests --harness verify_binomial_heap_property_after_decrease_key || echo "Proof failed - this is expected during development"
+          cargo kani --tests --harness verify_binomial_heap_property_after_decrease_key
           echo "Running legacy proofs..."
-          cargo kani --tests --harness verify_insert_increments_len || echo "Proof failed - this is expected during development"
+          cargo kani --tests --harness verify_insert_increments_len
