Add comprehensive unit tests and property test improvements for 2-3 heap
Unit Tests:
- Add test_insert_as_child: tests inserting a child node and maintaining 2-3 structure
- Add test_rebuild_from_children: tests rebuilding heap from collection of root nodes
- Add test_create_new_root_from_split: tests creating new root when splitting root node
- Add test_find_min_recursive: tests finding minimum node in subtree recursively
- Expose internal operations as testable functions:
  - insert_as_child_testable
  - rebuild_from_children_testable

Property Test Improvements:
- Add parallel_property_tests.rs: comprehensive property tests that compare ALL heap
  implementations on the same random inputs
- Tests generate random operation sequences and apply them to all heaps simultaneously
- Verifies all heaps produce identical results after each operation
- Drains all heaps to ensure identical final output sequences
- Tracks valid handles by item to safely test decrease_key operations

Other:
- Fix maintain_structure to use internal function names
- Fix clippy warnings: add allow attributes for private interfaces, use is_multiple_of, use flatten
- Add CI job for property tests in separate job

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ criterion = "0.5"
 smallvec = "1.13"
 
 [dev-dependencies]
-proptest = "1.4"
+proptest = { version = "1.4", features = ["fork"] }
 criterion = "0.5"
 big-o-test = "0.2"
 ctor = "0.2"
