feat: add multi-metric perf measurement and benchmark improvements (#68)
## Summary

- Create local `perf-measurement` sub-crate that captures wall clock
time plus hardware counters (instructions, cycles, cache refs, cache
misses) atomically using `perf_event::Group`
- Add `perf_table` benchmark for direct multi-metric output (Time, IPC,
LLC miss%)
- Add CPU pinning support via `BENCH_PIN_CPU` env var for stable results
on specific physical cores
- Use 2M node synthetic graph with Dijkstra rank-based queries (2^8,
2^12, 2^16, 2^20 nodes settled)
- Configure markdownlint to require compact table style (MD060) for
consistent formatting

## The Gap is Narrowing

The ratio of simple_binary to pairing_lazy time **decreases** as scale
increases:

| Scale | simple_binary | pairing_lazy | Ratio |
| --- | ---: | ---: | ---: |
| 2^8 | 3.2ms | 8.2ms | 2.5x |
| 2^12 | 75.6ms | 132.8ms | 1.8x |
| 2^16 | 2.15s | 3.97s | 1.8x |
| 2^20 | 72.8s | 124.0s | **1.7x** |

At 2^20 with ~1M decrease_key calls, the O(1) advantage is starting to
show - but cache effects still dominate. Pairing heap (lazy variant) is
the best advanced heap at 2^20 scale.

## Benchmark Results

### 2^8 (256 nodes settled) - fits in L1/L2 cache

| Algorithm | Time | IPC | LLC Miss% |
| --- | ---: | ---: | ---: |
| simple_binary | 3.2ms | 1.36 | 12.6 |
| strict_fib_opt | 6.6ms | 1.71 | 8.5 |
| twothree_opt | 6.8ms | 1.75 | 9.8 |
| fibonacci_lazy | 7.2ms | 1.71 | 10.5 |
| pairing_lazy | 8.2ms | 1.56 | 13.6 |
| skew_binom_opt | 8.2ms | 1.50 | 12.2 |
| pairing_opt | 8.7ms | 1.48 | 13.5 |
| strict_fib_lazy | 8.9ms | 1.28 | 12.2 |
| fibonacci_opt | 9.2ms | 1.34 | 16.3 |
| twothree_lazy | 9.4ms | 1.28 | 17.6 |
| hollow_opt | 9.7ms | 1.95 | 12.7 |
| skew_binom_lazy | 10.6ms | 1.18 | 15.9 |
| binomial_opt | 11.0ms | 1.47 | 12.9 |
| rank_pair_lazy | 11.3ms | 1.67 | 11.2 |
| hollow_lazy | 11.9ms | 1.37 | 13.5 |
| binomial_lazy | 12.9ms | 1.26 | 13.8 |
| skiplist_lazy | 20.1ms | 1.48 | 14.0 |

### 2^12 (4096 nodes settled)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = [".", "crates/intrusive-circular-list"]
+members = [".", "crates/intrusive-circular-list", "crates/perf-measurement"]
 
 [package]
 name = "rust-advanced-heaps"
@@ -16,6 +16,9 @@ categories = ["data-structures", "algorithms"]
 # Enable expensive O(n) invariant verification checks. Only use for debugging specific issues.
 # These checks significantly slow down all heap operations.
 expensive_verify = []
+# Enable hardware performance counter benchmarks (Linux only)
+# The feature flag controls which measurement type is used in benchmarks
+perf-counters = []
 # Enable experimental arena-based storage using slotmap for better cache locality.
 # This provides alternative heap types with *Arena suffix (e.g., SkewBinomialHeapArena).
 arena-storage = ["slotmap"]
@@ -34,15 +37,36 @@ slotmap = { version = "1.0", optional = true }
 
 [dev-dependencies]
 proptest = "1.4"
-criterion = "0.5"
+criterion = "0.8"
 big-o-test = "0.2"
 ctor = "0.2"
 parking_lot = "0.12"
+# CPU pinning for more stable benchmarks
+core_affinity = "0.8"
+
+# Hardware performance counters for benchmarks (Linux only)
+# Use with: cargo bench --features perf-counters
+[target.'cfg(target_os = "linux")'.dev-dependencies]
+perf-measurement = { path = "crates/perf-measurement" }
+perf-event = "0.4"
 
 [[bench]]
 name = "dimacs_benchmark"
 harness = false
 
+[[bench]]
+name = "perf_benchmark"
+harness = false
+
+[[bench]]
+name = "perf_table"
+harness = false
+
 # Commands for cargo-cmd (install with: cargo install cargo-cmd)
 [package.metadata.commands]
 download-dimacs = "./scripts/download-dimacs.sh"
+
+# Maximum optimization for benchmarks
+[profile.bench]
+lto = "thin"
+codegen-units = 1
